language-server/src/tests/snapshots/gleam_language_server__tests__action__extract_function_directly_registers_nullary_anonymous_functions_at_top_level.snap
---
source: language-server/src/tests/action.rs
expression: "\n pub fn main() {\n  let wibble = fn() {\n      let x = 5\n      x > 3\n  }\n}\n        "
---
----- BEFORE ACTION

 pub fn main() {
  let wibble = fn() {
               ▔▔▔▔▔▔
      let x = 5
▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
      x > 3
▔▔▔▔▔▔▔▔▔▔▔
  }
▔▔↑
}
        


----- AFTER ACTION

 pub fn main() {
  let wibble = function
}

fn function() -> Bool {
  let x = 5
      x > 3
}
