language-server/src/tests/snapshots/gleam_language_server__tests__action__extract_function_first_few_statements_inside_of_use.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn wibble() {\n    use wobble <- result.map(todo)\n    echo wobble as \"1\"\n    echo wobble as \"2\"\n    echo wobble as \"3\"\n    echo wobble as \"4\"\n}\n"
---
----- BEFORE ACTION

pub fn wibble() {
    use wobble <- result.map(todo)
    echo wobble as "1"
    ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
    echo wobble as "2"
▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔↑ 
    echo wobble as "3"
    echo wobble as "4"
}


----- AFTER ACTION

pub fn wibble() {
    use wobble <- result.map(todo)
    function(wobble)
    echo wobble as "3"
    echo wobble as "4"
}

fn function(wobble: a) -> Nil {
  echo wobble as "1"
    echo wobble as "2"
  Nil
}
