language-server/src/tests/snapshots/gleam_language_server__tests__action__extract_function_inside_anonymous_function_returning_value.snap
---
source: language-server/src/tests/action.rs
expression: "\nfn wibble() {\n  let wobble = fn() {\n    let random_number = 4\n    random_number * 42\n  }\n}\n"
---
----- BEFORE ACTION

fn wibble() {
  let wobble = fn() {
    let random_number = 4
    random_number * 42
    ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔↑ 
  }
}


----- AFTER ACTION

fn wibble() {
  let wobble = fn() {
    let random_number = 4
    function(random_number)
  }
}

fn function(random_number: Int) -> Int {
  random_number * 42
}
